# expidite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  beeops_chaos.py  check.cmd  pyproject.toml  pytest.ini
docs/: outage_data_retention.md  outage_test_plan.md  rpi_emulator.md  ssh-tunnel-protocol.md
src/etl/: utils.py  viewer.ipynb
src/expidite_etl/: utils.py
src/expidite_rpi/: __init__.py  bcli.py  rpi_core.py  web_server.py
src/expidite_rpi/core/: README.md  __init__.py  api.py  cloud_connector.py  config_validator.py  configuration.py  device_config_objects.py  device_health.py  device_manager.py  device_status.py  diagnostics_bundle.py  dp.py  dp_config_objects.py  dp_node.py  dp_tree.py  dp_worker_thread.py  edge_orchestrator.py  file_naming.py  iot_hub_client.py  reboot.py  sensor.py  shared_state.py  stats_tracker.py
src/expidite_rpi/core/cloud_connector/: __init__.py  async_cloud_connector.py  cloud_connector.py  local_cloud_connector.py  spool.py  sync_cloud_connector.py
src/expidite_rpi/core/hardware/: button.py
src/expidite_rpi/example/: keys.env  my_fleet_config.py  my_processor_example.py  my_sensor_example.py  run_my_sensor.py  run_sensor_core.ipynb  run_system_test.py  system.cfg
src/expidite_rpi/management/: bcli.py  common.py  iot_hub_client.py  management_service.py  ssh_tunnel.py
src/expidite_rpi/scripts/: README.md  github_installer.py  led-manager.service  led_control.py  network_test.sh  rpi_installer.sh  upload.py  zero_installer.sh
src/expidite_rpi/sensors/: device_recipes.py  processor_video_aruco.py  processor_video_trap_cam.py  processor_video_trapcam.py  sensor_adxl34x.py  sensor_aht20.py  sensor_audio_on_demand.py  sensor_bmp280.py  sensor_ltr390.py  sensor_no_op.py  sensor_rpicam_still.py  sensor_rpicam_vid.py  sensor_sht20.py  sensor_sht31.py  sensor_sht40.py  sensor_video_on_demand.py
src/expidite_rpi/sensors/drivers/: adafruit_adxl34x.py  aht20.py  crc8_helper.py  ltr390.py
src/expidite_rpi/utils/: audio_transforms.py  cloud_journal.py  git_helper.py  journal.py  journal_pool.py  rpi_emulator.py  utils.py  utils_clean.py
src/expidite_rpi/web/: server.py
src/rpi/: bcli.py  rpi_core.py
src/rpi/core/: cloud_connector.py  config_validator.py  configuration.py  device_config_objects.py  device_health.py  device_manager.py  dp.py  dp_config_objects.py  dp_node.py  dp_tree.py  dp_worker_thread.py  edge_orchestrator.py  file_naming.py  sensor.py  stats_tracker.py
src/rpi/example/: my_fleet_config.py  my_processor_example.py  my_sensor_example.py  run_my_sensor.py  run_sensor_core.ipynb
src/rpi/sensors/: device_recipes.py  processor_video_aruco.py  processor_video_trap_cam.py  sensor_aht20.py  sensor_ltr390.py  sensor_rpicam_vid.py  sensor_sht31.py  sensor_video.py
src/rpi/sensors/drivers/: aht20.py  ltr390.py
src/rpi/utils/: audio_transforms.py  cloud_journal.py  git_helper.py  journal.py  journal_pool.py  rpi_emulator.py  utils.py
test/: conftest.py
test/rpi_core/core/: bcli_test.py  cloud_connector_delta_test.py  cloud_connector_test.py  cloud_connector_transient_test.py  cloud_journal_test.py  configuration_test.py  device_manager_test.py  disk_spool_test.py  file_naming_test.py  iot_hub_client_test.py  journal_test.py  orchestrator_test.py  orchetstrator_test.py  review_mode_test.py  rpi_core_test.py  rpi_emulator_test.py  shared_state_test.py  test_cloud_connector.py  utils_test.py
test/rpi_core/management/: iot_hub_client_test.py  ssh_tunnel_test.py
test/rpi_core/sensors/: adxl34x_device_test.py  bmp280_device_test.py  example_device_test.py  i2c_transient_retry_test.py  processor_video_aruco_test.py  sht31_device_test.py  sht40_device_test.py  trap_cam_device_test.py
