[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "expidite"
version = "0.1.132"
description = "Python module to support using Raspberry Pi for scientific data collection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Estella", email = "estella@bee-ops.com"},
  {name = "Stuart", email = "stuart@bee-ops.com"},
]
dependencies = [
    "adafruit-blinka",
    "adafruit-circuitpython-busdevice",
    "adafruit-circuitpython-bmp280",
    "adafruit-circuitpython-ltr390",
    "azure-storage-blob",
    "click",
    "python-crontab",
    "gitpython",
    "gpiozero",
    "numpy",
    'opencv-python; sys_platform == "win32"',
    "pandas == 2.3.3",
    "psutil == 7.1.3",
    "pydantic-settings",
    "PyYAML == 6.0.3",
    "smbus2",
    "sensirion_i2c_sht4x",
    'systemd-python; sys_platform != "win32"',
    "wheel",
]

[project.optional-dependencies]
dev = [
    "codespell == 2.4.1",
    "deadcode == 2.4.1",
    "mypy == 1.19.1",
    "pandas-stubs == 2.3.3.251201",
    "pyright == 1.1.407",
    "pytest == 9.0.2",
    "pytest-socket == 0.7.0",
    "ruff == 0.14.9",
    "ty == 0.0.3",
    "types-psutil == 7.1.3.20251211",
    "types-PyYAML == 6.0.12.20250915",
]

[project.scripts]
bcli = "expidite_rpi.bcli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"scripts" = ["src/expidite_rpi/scripts/*"]

##############################################################################################################
# ruff: static lint and style checker.
##############################################################################################################
[tool.ruff]
line-length = 110
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Enforce these rules.
select = [
    "F",   # pyflakes
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "I",   # isort
    "RUF", # ruff-specific rules
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "EM", # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "PERF", # flake8-performance
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PD", # pandas-vet
    "PL", # pylint
    "UP", # pyupgrade
    # Docstring D1 rules require docstring, which we don't currently enforce.
    # Docstring D2/D3 rules cover correctness of the content - if we have docstring it should be correct. We
    # could enable more of these.
    "D200", "D201", "D202", "D206", "D207", "D208", "D210", "D214", "D215",
    "D300", "D301",
    # Docstring D4 covers content and style - we could enable more of these.
    "D402", "D403", "D405", "D412", "D414", "D416", "D418", "D419",
]
# We have deliberately chosen to ignore these rules.
ignore = [
    "ANN002", # Nice to fix.
    "ANN003", # Nice to fix.
    "EM101", # Deliberately ignore - no benefit.
    "PERF401", # We should fix these (more readable and more performant).
    "PLC0415", # We want this in some places.
    "PLR0912", # Too many branches in a function - nice to fix but a lot of effort.
    "PLR0913", # Too many arguments in a function - nice to fix but a lot of effort.
    "PLR0915", # Too many statements in a function - nice to fix but a lot of effort.
    "PLR2004", # Little benefit in defining constants in many cases.
    "PLW0603", # We want to use `global` in a few places.
    "SIM102", # Doesn't always improve readability.
    "SIM108", # Ternary operator - could fix but not always more readable.
]
# These files had exceptions prior to rules being enforced.  Ignore temporarily until we can fix.
[tool.ruff.lint.per-file-ignores]
"src/expidite_rpi/core/cloud_connector.py" = ["B012"]
"src/expidite_rpi/core/edge_orchestrator.py" = ["B905"]
"src/expidite_rpi/sensors/drivers/*" = ["ANN001", "ANN201"]
"src/expidite_rpi/sensors/processor_video_aruco.py" = ["ANN001", "B905"]
"src/expidite_rpi/sensors/sensor_adxl34x.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_aht20.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_bmp280.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_ltr390.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_sht31.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_sht40.py" = ["UP031"]
"src/expidite_rpi/utils/rpi_emulator.py" = ["ANN001", "PLW2901"]
"test/conftest.py" = ["ANN001", "ANN201"]
"test/rpi_core/core/review_mode_test.py" = ["ANN001"]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

##############################################################################################################
# mypy: static type checker
##############################################################################################################
[tool.mypy]
python_version = "3.11"
files = "**/*.py"
pretty = true

# Override defaults to be more strict.
check_untyped_defs = true # Type-check the interior of functions without type annotations.
disallow_any_generics = true # Prevent use of generic types that do not specify explicit type parameters.
disallow_untyped_defs = true # Prevent functions with missing or incomplete type annotations.
disallow_untyped_calls = true # Prevent calls to functions without type annotations from functions with them.
ignore_missing_imports = true # Suppress error messages about imports that cannot be resolved.
strict_equality = true # Prohibit equality checks, identity checks, and container checks between non-overlapping types.
warn_return_any = true # Prevent returning a value with type Any from a function declared with a non-Any return type.
warn_unreachable = true # Prevent code inferred to be unreachable or redundant.
warn_unused_ignores = true # Prevent unneeded # type: ignore comments.

# These files/modules had exceptions prior to rules being enforced. Ignore temporarily until we can fix them.
[[tool.mypy.overrides]]
module = [
    "test.conftest",
    "test.rpi_core.core.review_mode_test",
]
disallow_untyped_defs = false
[[tool.mypy.overrides]]
module = ["expidite_rpi.sensors.drivers.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
strict_equality = false
warn_return_any = false
[[tool.mypy.overrides]]
module = [
    "expidite_rpi.sensors.drivers.adafruit_adxl34x",
    "expidite_rpi.core.device_config_objects",
    "expidite_rpi.utils.journal",
    "expidite_rpi.core.file_naming",
    "expidite_rpi.core.cloud_connector",
    "expidite_rpi.utils.rpi_emulator",
    "expidite_rpi.utils.cloud_journal",
    "expidite_rpi.utils.utils",
    "expidite_rpi.utils.journal_pool",
    "expidite_rpi.core.dp_node",
    "expidite_rpi.sensors.processor_video_aruco",
    "expidite_rpi.example.my_processor_example",
    "expidite_rpi.core.dp_tree",
    "expidite_rpi.core.device_health",
    "expidite_rpi.core.config_validator",
    "expidite_rpi.core.edge_orchestrator",
    "expidite_rpi.bcli",
]
disallow_any_generics = false
[[tool.mypy.overrides]]
module = [
    "expidite_rpi.sensors.drivers.ltr390",
    "expidite_rpi.sensors.drivers.adafruit_adxl34x",
    "expidite_rpi.core.cloud_connector",
    "expidite_rpi.core.configuration",
    "expidite_rpi.utils.utils",
    "expidite_rpi.core.device_health",
    "expidite_rpi.sensors.processor_video_aruco",
    "expidite_rpi.sensors.processor_video_trapcam",
    "expidite_rpi.sensors.sensor_ltr390",
    "expidite_rpi.sensors.sensor_bmp280",
]
warn_unused_ignores = false

##############################################################################################################
# pyright: static type checker and bug detection.
##############################################################################################################
[tool.pyright]
include = ["src", "test"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# TODO existing code fails all of these. We should either enable them and fix the errors, or comment them as
# why we don't want them.
reportPossiblyUnboundVariable = "none" # Definitely want this.
reportUnnecessaryComparison = "none" # Definitely want this.
reportAttributeAccessIssue = "none"
reportConstantRedefinition = "none"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportOptionalMemberAccess = "none"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryIsInstance = "none"

##############################################################################################################
# ty: static type checker.
##############################################################################################################
[tool.ty.src]
include = ["src", "tests"]
[tool.ty.environment]
python-version = "3.11"
# These files/modules had exceptions prior to rules being enforced. Ignore temporarily until we can fix them.
[[tool.ty.overrides]]
include = ["src/expidite_rpi/sensors/drivers"]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-method-override = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
[[tool.ty.overrides]]
include = [
    "src/expidite_rpi/sensors/sensor_bmp280.py",
    "src/expidite_rpi/sensors/sensor_ltr390.py"
]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
possibly-missing-attribute = "ignore"

##############################################################################################################
# deadcode: unused code detection.
# TODO: this tool generatea a lot of false positives - configuration is required to eliminate them.
##############################################################################################################
[tool.deadcode]
exclude = [".venv"]
min-confidence = 90
fail-on-found = true
