[build-system]
requires = ["setuptools==82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expidite"
version = "0.1.161"
description = "Python module to support using Raspberry Pi for scientific data collection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Estella", email = "estella@bee-ops.com"},
  {name = "Stuart", email = "stuart@bee-ops.com"},
]
dependencies = [
    "adafruit-blinka==8.69.0",
    "adafruit-circuitpython-busdevice==5.2.15",
    "adafruit-circuitpython-bmp280==3.3.9",
    "adafruit-circuitpython-ltr390==1.1.22",
    "adafruit-platformdetect==3.88",
    "azure-storage-blob==12.28.0",
    "bottleneck==1.6.0", # Required by pandas.
    "click==8.3.1",
    "python-crontab==3.3.0",
    "gpiozero==2.0.1",
    "numexpr==2.14.1", # Required by pandas.
    "numpy==1.26.4; python_version < '3.13' and sys_platform == 'linux'",
    "numpy==2.4.2; python_version >= '3.13' or sys_platform == 'win32'",
    'opencv-python==4.13.0.92; sys_platform == "win32"',
    "pandas==3.0.1",
    "psutil==7.2.2",
    "pydantic-settings==2.13.1",
    "PyGithub==2.8.1",
    "PyYAML==6.0.3",
    "smbus2==0.6.0",
    "sensirion_i2c_sht4x==1.1.0",
    'systemd-python==235; sys_platform != "win32"',
]

[project.optional-dependencies]
dev = [
    "codespell==2.4.1",
    "deadcode==2.4.1",
    "mypy==1.19.1",
    "pandas-stubs==3.0.0.260204",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-socket==0.7.0",
    "ruff==0.15.2",
    "ty==0.0.19",
    "types-psutil==7.2.2.20260130",
    "types-PyYAML==6.0.12.20250915",
]

[project.scripts]
bcli = "expidite_rpi.bcli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"scripts" = ["src/expidite_rpi/scripts/*"]

##############################################################################################################
# ruff: static lint and style checker.
##############################################################################################################
[tool.ruff]
line-length = 110
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
# Enforce all ruff rules, unless explicitly overridden below.
select = ["ALL"]
ignore = [
    # Rules that we don't want to enforce.
    "COM812",  # Little benefit.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Public docstring.
    "EM101",  # No benefit.
    "ERA",  # No benefit.
    "FBT",  # No benefit.
    "FIX",  # No benefit.
    "G004",  # Prefer readability over this micro-optimization.
    "PLC0415",  # We want this in some places.
    "PLR2004",  # Little benefit in defining constants in many cases.
    "PLW0603",  # We want to use `global` in a few places.
    "PTH",  # No benefit.
    "S101",  # No benefit.
    "SIM102",  # Doesn't always improve readability.
    "SIM108",  # Doesn't always improve readability.
    "T20",  # We want this in some places.
    "TD",  # No benefit.
    "TRY003",  # No benefit.
    # Rules that we should enforce, but need to fix the code first.
    "ARG001",
    "ARG002",
    "BLE001",
    "C901",
    "D205",
    "N",
    "PGH003",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PYI034",
    "S108",
    "S110",
    "S307",
    "S311",
    "S602",
    "S603",
    "S605",
    "S607",
    "TC",
    "TRY300",
    "TRY301",
]
# Rules that we should enforce, but need to fix the code first.
[tool.ruff.lint.per-file-ignores]
"src/expidite_rpi/core/cloud_connector.py" = ["B012"]
"src/expidite_rpi/core/config_validator.py" = ["SLF001"]
"src/expidite_rpi/core/dp_tree.py" = ["SLF001"]
"src/expidite_rpi/core/dp_worker_thread.py" = ["SLF001"]
"src/expidite_rpi/core/edge_orchestrator.py" = ["B905", "SLF001"]
"src/expidite_rpi/example/my_processor_example.py" = ["PERF401"]
"src/expidite_rpi/rpi_core.py" = ["SLF001"]
"src/expidite_rpi/sensors/drivers/*" = ["ANN001", "ANN002", "ANN003", "ANN201"]
"src/expidite_rpi/sensors/processor_video_aruco.py" = ["ANN001", "B905", "PERF401"]
"src/expidite_rpi/sensors/sensor_adxl34x.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_aht20.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_bmp280.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_ltr390.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_sht31.py" = ["UP031"]
"src/expidite_rpi/sensors/sensor_sht40.py" = ["UP031"]
"src/expidite_rpi/utils/rpi_emulator.py" = ["ANN001", "PLW2901"]
"src/expidite_rpi/utils/utils.py" = ["PERF401"]
"test/conftest.py" = ["ANN001", "ANN201"]
"test/rpi_core/core/cloud_journal_test.py" = ["SLF001"]
"test/rpi_core/core/review_mode_test.py" = ["ANN001"]
"test/rpi_core/core/orchestrator_test.py" = ["SLF001"]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

##############################################################################################################
# mypy: static type checker
##############################################################################################################
[tool.mypy]
python_version = "3.11"
files = "**/*.py"
pretty = true

# Override defaults to be more strict.
check_untyped_defs = true # Type-check the interior of functions without type annotations.
disallow_any_generics = true # Prevent use of generic types that do not specify explicit type parameters.
disallow_untyped_defs = true # Prevent functions with missing or incomplete type annotations.
disallow_untyped_calls = true # Prevent calls to functions without type annotations from functions with them.
ignore_missing_imports = true # Suppress error messages about imports that cannot be resolved.
strict_equality = true # Prohibit equality checks, identity checks, and container checks between non-overlapping types.
warn_return_any = true # Prevent returning a value with type Any from a function declared with a non-Any return type.
warn_unreachable = true # Prevent code inferred to be unreachable or redundant.
warn_unused_ignores = true # Prevent unneeded # type: ignore comments.

# These files/modules had exceptions prior to rules being enforced. Ignore temporarily until we can fix them.
[[tool.mypy.overrides]]
module = [
    "test.conftest",
    "test.rpi_core.core.review_mode_test",
]
disallow_untyped_defs = false
[[tool.mypy.overrides]]
module = ["expidite_rpi.sensors.drivers.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
strict_equality = false
warn_return_any = false
[[tool.mypy.overrides]]
module = [
    "expidite_rpi.sensors.drivers.adafruit_adxl34x",
    "expidite_rpi.core.device_config_objects",
    "expidite_rpi.utils.journal",
    "expidite_rpi.core.file_naming",
    "expidite_rpi.core.cloud_connector",
    "expidite_rpi.utils.rpi_emulator",
    "expidite_rpi.utils.cloud_journal",
    "expidite_rpi.utils.utils",
    "expidite_rpi.utils.journal_pool",
    "expidite_rpi.core.dp_node",
    "expidite_rpi.sensors.processor_video_aruco",
    "expidite_rpi.example.my_processor_example",
    "expidite_rpi.core.dp_tree",
    "expidite_rpi.core.device_health",
    "expidite_rpi.core.config_validator",
    "expidite_rpi.core.edge_orchestrator",
    "expidite_rpi.bcli",
]
disallow_any_generics = false
[[tool.mypy.overrides]]
module = [
    "expidite_rpi.sensors.drivers.ltr390",
    "expidite_rpi.sensors.drivers.adafruit_adxl34x",
    "expidite_rpi.core.cloud_connector",
    "expidite_rpi.core.configuration",
    "expidite_rpi.utils.utils",
    "expidite_rpi.core.device_health",
    "expidite_rpi.sensors.processor_video_aruco",
    "expidite_rpi.sensors.processor_video_trapcam",
    "expidite_rpi.sensors.sensor_ltr390",
    "expidite_rpi.sensors.sensor_bmp280",
]
warn_unused_ignores = false
[[tool.mypy.overrides]]
module = [
    "expidite_rpi.sensors.processor_video_aruco",
]
disallow_untyped_defs = false

##############################################################################################################
# pyright: static type checker and bug detection.
##############################################################################################################
[tool.pyright]
include = ["src", "test"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# TODO existing code fails all of these. We should either enable them and fix the errors, or comment them as
# why we don't want them.
reportPossiblyUnboundVariable = "none" # Definitely want this.
reportUnnecessaryComparison = "none" # Definitely want this.
reportAttributeAccessIssue = "none"
reportConstantRedefinition = "none"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportOptionalMemberAccess = "none"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryIsInstance = "none"

##############################################################################################################
# ty: static type checker.
##############################################################################################################
[tool.ty.src]
include = ["src", "tests"]
[tool.ty.environment]
python-version = "3.11"
# These files/modules had exceptions prior to rules being enforced. Ignore temporarily until we can fix them.
[[tool.ty.overrides]]
include = ["src/expidite_rpi/sensors/drivers"]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-method-override = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
[[tool.ty.overrides]]
include = [
    "src/expidite_rpi/sensors/sensor_bmp280.py",
    "src/expidite_rpi/sensors/sensor_ltr390.py"
]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
possibly-missing-attribute = "ignore"

##############################################################################################################
# deadcode: unused code detection.
# TODO: this tool generatea a lot of false positives - configuration is required to eliminate them.
##############################################################################################################
[tool.deadcode]
exclude = [".venv"]
min-confidence = 90
fail-on-found = true
